<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:id="@+id/logoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLogoBackground"
        android:layout_marginTop="50dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_image" />
    </LinearLayout>

    <Button
        android:id="@+id/game1Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_game_background"
        android:text="@string/game_1"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/logoContainer" />

    <Button
        android:id="@+id/game2Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_game_background"
        android:text="@string/game_2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/game1Button" />

    <Button
        android:id="@+id/game3Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_game_background"
        android:text="@string/game_3"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/game2Button" />

    <Button
        android:id="@+id/game4Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_game_background"
        android:text="@string/game_4"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/game3Button" />

    <Button
        android:id="@+id/game5Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_game_background"
        android:text="@string/game_5"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/game4Button" />

</androidx.constraintlayout.widget.ConstraintLayout>